--- a/pd/src/main/resources/ec/edu/espol/pd/eleccion.fxml
+++ b/pd/src/main/resources/ec/edu/espol/pd/eleccion.fxml
@@ -1,13 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ec.edu.espol.pd.EleccionController">
+<AnchorPane id="AnchorPane" fx:id="Anchorpane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ec.edu.espol.pd.EleccionController">
    <children>
-      <Button fx:id="comprimir" layoutX="72.0" layoutY="151.0" mnemonicParsing="false" onAction="#uploadFile1" text="Comprimir Archivo" />
-      <TextArea fx:id="mensaje" layoutX="30.0" layoutY="200.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button fx:id="descomprimir" layoutX="392.0" layoutY="151.0" mnemonicParsing="false" onAction="#uploadFile2" text="Descomprimir Archivo" />
+      <Button id="line" fx:id="comprimir" layoutX="72.0" layoutY="200.0" mnemonicParsing="false" onAction="#uploadFile1" prefHeight="29.0" prefWidth="134.0" stylesheets="@estilo/stylesheet.css" text="Comprimir Archivo">
+         <font>
+            <Font size="13.0" />
+         </font></Button>
+      <TextArea fx:id="mensaje" layoutX="72.0" layoutY="262.0" prefHeight="90.0" prefWidth="455.0" />
+      <Button id="line" fx:id="descomprimir" layoutX="393.0" layoutY="200.0" mnemonicParsing="false" onAction="#uploadFile2" prefHeight="29.0" prefWidth="134.0" stylesheets="@estilo/stylesheet.css" text="Descomprimir Archivo">
+         <font>
+            <Font size="13.0" />
+         </font></Button>
+      <Text fx:id="titulo" layoutX="122.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="HuffEncoder" textAlignment="CENTER" wrappingWidth="356.771484375" />
+      <ImageView fitHeight="90.0" fitWidth="98.0" layoutX="84.0" layoutY="101.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@estilo/carpeta-zip.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="90.0" fitWidth="90.0" layoutX="415.0" layoutY="101.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@estilo/archivo-zip.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
